# agents-league

./: README.md  pyproject.toml  pytest.ini  requirements.txt  start_league.sh  test_integration.py  whitelist.py
.github/workflows/: ci.yml
agents/: __init__.py  league_manager.py  player.py  referee.py
consts/: __init__.py
redundent/PRPs/: distributed-ai-agent-league-system.md
redundent/examples/: PYDANTIC_GUIDE.md  README.md  advanced_validation_patterns.py  distributed_agent_http.py  distributed_system_pydantic_guide.py  fastapi_agent_integration.py  performance_optimization_patterns.py  run_examples.py  test_agent_communication.py
shared/: __init__.py  exceptions.py  logger.py  ollama_strategy.py  schemas.py
tests/: conftest.py  test_config.py  test_exceptions.py  test_logger.py  test_ollama.py  test_schemas.py  test_smoke.py  test_strategies.py
